---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/struct.rs
description: "Rejects duplicate #type keys in struct"
expression: "{\"#struct\": {}, \"#type\": \"Person\", \"#type\": \"User\"}"
---
[31m[parser::object::duplicate-key] Error:[0m Duplicate key in object
   ╭─[ <unknown>:1:36 ]
   │
 1 │ {"#struct": {}, "#type": "Person", "#type": "User"}
   │                 ───┬───            ───┬───  
   │                    │                  ╰───── Duplicate key
   │                    │                        
   │                    ╰──────────────────────── First occurrence of `#type`
   │ 
   │ Help: J-Expr does not allow duplicate keys in the same object. Each key must be unique.
───╯
